# iqs_269

./: .gitignore  CMakeLists.txt  stm32.cmake  version.cmake  writeprog.sh
config/: board.h  stm32f4xx_hal_conf.h
inc/: basic_i2c.h  console.h
inc/system/: system.h
src/: basic_i2c.c  console.c  main.c  printf-stdarg.c  src.cmake
src/ids_driver/: ids269.c  ids269.h
src/system/: stm32f4xx_hal_msp.c  stm32f4xx_it.c  system.cmake  system_stm32f4xx.c
